--- a/src/Components/Planner/Day.module.css
+++ b/src/Components/Planner/Day.module.css
@@ -8,7 +8,7 @@
   padding: 0px 20px;
   margin-top: 28px;
   height: auto;
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
 
 .dayHeader {
